Disabled error prone for now. Improved eventflow speed